@@ -19,7 +19,7 @@ requires: [git, railsapps,
   rails_devise_pundit,
   rails_signup_download,
   setup, readme, gems,
-  tests4,
+  tests,
   email,
   devise, omniauth, roles,
   frontend, pages,
